add notification feature
